# Trajectory_Optimization_Gradient_Based

./: .gitignore  CMakeLists.txt  README.md  package.xml
docs/: Manual.tex  OptimizationAlgorithmMacros.sty
include/: ConfigParser.h  CsvWriter.h  DataReader.h  GeometryUtils.h  GeometryUtils.hpp  GradientCheck.h  GradientCheck.hpp  InputParser.h  Pagmo_traj_optimization.hpp  RobotKDL.h  Robot_mocap_opt_problem.h  Robot_mocap_opt_problem.hpp  TrajOpt_Solver.h  XMLParser.h  opt_problem.hpp  trajectory_optimization.hpp
installScripts/: installBoost.sh  installNLOPT.sh  installPagmo2.sh  installPagmoNonFree.sh  installSNOPTInterface.sh
src/: ConfigParser.cpp  CsvWriter.cpp  DataReader.cpp  GeometryUtils.cpp  GradientCheck.cpp  InputParser.cpp  RobotKDL.cpp  Robot_mocap_opt_problem.cpp  TrajOpt_Solver.cpp  XMLParser.cpp  batch_solver.cpp  mocap_traj_optimize.cpp  mocap_traj_problem.cpp  seed_solver.cpp  single_solver.cpp
