<?xml version="1.0"?>
<package format="2">
  <name>m20ia_traj_opt</name>
  <version>0.0.3</version>
  <description>Gradient-based optimization of a motion capture trajectory</description>

  <maintainer email="klevis.aliaj@utah.edu">Klevis</maintainer>
  <author email="klevis.aliaj@utah.edu">Jane Doe</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
